fix padding on mobile

--- a/src/pages/AboutHaUIFood/AboutHaUIFood.module.scss
+++ b/src/pages/AboutHaUIFood/AboutHaUIFood.module.scss
@@ -286,7 +286,7 @@
     }
 
     @include media-breakpoint-down(md) {
-      padding: 20px;
+      padding: 15px;
     }
 
     &-heading {
